# KiteSQL

./: .gitignore  AGENT.md  Cargo.toml  Makefile  README.md  build.rs
.devin/: wiki.json
.github/workflows/: ci.yml
benchmarks/: query_benchmark.rs
docs/: features.md  transaction-isolation.md
examples/: bind_heaptrack.rs  hello_world.rs  transaction.rs  wasm_hello_world.test.mjs  wasm_index_usage.test.mjs
kite_sql_serde_macros/: Cargo.toml
kite_sql_serde_macros/src/: from_tuple.rs  lib.rs  orm.rs  projection.rs  reference_serialization.rs
scripts/: run_tpcc_matrix.sh  run_tpcc_stable.py
src/: db.rs  docs.rs  errors.rs  iter_ext.rs  lib.rs  orm.rs  paths.rs  python.rs  wasm.rs
src/binder/: aggregate.rs  alter_table.rs  analyze.rs  copy.rs  create_index.rs  create_table.rs  create_view.rs  delete.rs  describe.rs  distinct.rs  drop_index.rs  drop_table.rs  drop_view.rs  explain.rs  expr.rs  insert.rs  mod.rs  parser.rs  select.rs  show_table.rs  show_view.rs  truncate.rs  update.rs
src/catalog/: column.rs  mod.rs  table.rs  view.rs
src/execution/: ddl_apply.rs  execute_macro.rs  mod.rs
src/execution/ddl/: add_column.rs  change_column.rs  create_index.rs  create_table.rs  create_view.rs  drop_column.rs  drop_index.rs  drop_table.rs  drop_view.rs  mod.rs  truncate.rs
src/execution/dml/: analyze.rs  copy_from_file.rs  copy_to_file.rs  delete.rs  insert.rs  mod.rs  update.rs
src/execution/dql/: describe.rs  dummy.rs  except.rs  explain.rs  filter.rs  function_scan.rs  index_scan.rs  limit.rs  mark_apply.rs  mod.rs  projection.rs  scalar_apply.rs  scalar_subquery.rs  seq_scan.rs  set_membership.rs  show_table.rs  show_view.rs  sort.rs  top_k.rs  union.rs  values.rs
src/execution/dql/aggregate/: avg.rs  count.rs  hash_agg.rs  min_max.rs  mod.rs  simple_agg.rs  stream_distinct.rs  sum.rs
src/execution/dql/join/: hash_join.rs  mod.rs  nested_loop_join.rs
src/execution/dql/join/hash/: full_join.rs  inner_join.rs  left_anti_join.rs  left_join.rs  left_semi_join.rs  mod.rs  right_join.rs
src/expression/: agg.rs  evaluator.rs  mod.rs  range_detacher.rs  simplify.rs  visitor.rs  visitor_mut.rs
src/expression/function/: mod.rs  scala.rs  table.rs
src/function/: char_length.rs  current_date.rs  current_timestamp.rs  lower.rs  mod.rs  numbers.rs  octet_length.rs  upper.rs
src/macros/: mod.rs
src/optimizer/: mod.rs  plan_utils.rs
src/optimizer/core/: cm_sketch.rs  histogram.rs  hll.rs  kll_sketch.rs  memo.rs  mod.rs  pattern.rs  rule.rs  statistics_meta.rs  top_n.rs
src/optimizer/heuristic/: batch.rs  graph.rs  matcher.rs  mod.rs  optimizer.rs
src/optimizer/rule/: mod.rs
src/optimizer/rule/implementation/: macros.rs  mod.rs
src/optimizer/rule/implementation/ddl/: add_column.rs  change_column.rs  create_table.rs  drop_column.rs  drop_table.rs  mod.rs  truncate.rs
src/optimizer/rule/implementation/dml/: analyze.rs  copy_from_file.rs  copy_to_file.rs  delete.rs  insert.rs  mod.rs  update.rs
src/optimizer/rule/implementation/dql/: aggregate.rs  dummy.rs  filter.rs  function_scan.rs  join.rs  limit.rs  mark_apply.rs  mod.rs  projection.rs  scalar_apply.rs  scalar_subquery.rs  sort.rs  table_scan.rs  top_k.rs  values.rs
src/optimizer/rule/normalization/: agg_elimination.rs  column_pruning.rs  combine_operators.rs  compilation_in_advance.rs  elimination.rs  min_max_top_k.rs  mod.rs  parameterized_index.rs  pushdown_limit.rs  pushdown_predicates.rs  simplification.rs  sort_elimination.rs  top_k.rs
src/orm/: README.md  ddl.rs  dml.rs  dql.rs  mod.rs
src/parser/: mod.rs
src/planner/: arena.rs  mod.rs
src/planner/operator/: aggregate.rs  analyze.rs  copy_from_file.rs  copy_to_file.rs  create_index.rs  create_table.rs  create_view.rs  delete.rs  describe.rs  drop_index.rs  drop_table.rs  drop_view.rs  except.rs  filter.rs  function_scan.rs  insert.rs  join.rs  limit.rs  mark_apply.rs  mod.rs  project.rs  scalar_apply.rs  scalar_subquery.rs  set_membership.rs  sort.rs  table_scan.rs  top_k.rs  truncate.rs  union.rs  update.rs  values.rs
src/planner/operator/alter_table/: add_column.rs  change_column.rs  drop_column.rs  mod.rs
src/serdes/: boolean.rs  bound.rs  btree_map.rs  char.rs  char_length_units.rs  column.rs  data_value.rs  evaluator.rs  function.rs  hasher.rs  index.rs  mod.rs  num.rs  option.rs  pair.rs  path_buf.rs  phantom.rs  ptr.rs  slice.rs  stable_hash.rs  string.rs  trim.rs  ulid.rs  vec.rs
src/storage/: lmdb.rs  memory.rs  mod.rs  rocksdb.rs  table_codec.rs
src/types/: index.rs  mod.rs  serialize.rs  tuple.rs  tuple_builder.rs  value.rs
src/types/evaluator/: binary.rs  boolean.rs  cast.rs  date.rs  datetime.rs  decimal.rs  float32.rs  float64.rs  int16.rs  int32.rs  int64.rs  int8.rs  mod.rs  null.rs  time32.rs  time64.rs  tuple.rs  uint16.rs  uint32.rs  uint64.rs  uint8.rs  unary.rs  utf8.rs
src/utils/: lru.rs  mod.rs
tests/macros-test/: Cargo.toml
tests/macros-test/src/: main.rs
tests/slt/: alter_table.slt  alter_table_large.slt  any_all_quantifier.slt  change_column.slt  copy.slt  create_index.slt  describe.slt  distinct.slt  filter.slt  having.slt  insert.slt  joined_dml.slt  order_by.slt  set_operation.slt  show_view.slt  stream_distinct.slt  stream_distinct_explain.slt  subquery.slt  union.slt  update.slt  values.slt  view.slt  where_by_index.slt  where_by_index_explain.slt
tests/slt/crdb/: delete.slt  join.slt  order_by.slt  sqlite.slt  update.slt
tests/slt/sql_2016/: E061_07.slt  E061_12.slt  F131_03.slt  F471.slt
tests/sqllogictest/: Cargo.toml
tests/sqllogictest/src/: lib.rs  main.rs
tpcc/: Cargo.toml  README.md
tpcc/src/: delivery.rs  load.rs  main.rs  new_ord.rs  order_stat.rs  payment.rs  rt_hist.rs  slev.rs  utils.rs
tpcc/src/backend/: dual.rs  kite.rs  kitesql_lmdb.rs  kitesql_rocksdb.rs  mod.rs  sqlite.rs
