# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name          = "kite_sql"
version       = "0.2.1"
edition       = "2021"
build         = "build.rs"
authors       = ["Kould <kould2333@gmail.com>", "Xwg <loloxwg@gmail.com>"]
description   = "SQL as a Function for Rust"
documentation = "https://docs.rs/kite_sql/latest/kite_sql/"
license       = "Apache-2.0"
repository    = "https://github.com/KipData/KiteSQL"
readme        = "README.md"
keywords      = ["sql", "sqlite", "database", "mysql"]
categories    = ["development-tools", "database"]

[[bin]]
name              = "kitesql-shell"
path              = "src/bin/shell.rs"
required-features = ["rocksdb", "shell"]

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[features]
default = ["macros", "rocksdb"]
macros  = []
orm     = []
rocksdb = ["dep:rocksdb"]
unsafe_txdb_checkpoint = ["rocksdb", "dep:librocksdb-sys"]
lmdb    = ["dep:lmdb", "dep:lmdb-sys"]
pprof   = ["pprof/criterion", "pprof/flamegraph"]
python  = ["dep:pyo3"]
shell   = ["dep:comfy-table", "dep:rustyline"]

[[bench]]
name    = "query_bench"
path    = "benchmarks/query_benchmark.rs"
harness = false
required-features = ["pprof"]

[dependencies]
ahash                 = { version = "0.8" }
bumpalo               = { version = "3", features = ["allocator-api2", "collections", "std"] }
byteorder             = { version = "1" }
chrono                = { version = "0.4" }
csv                   = { version = "1" }
fixedbitset           = { version = "0.4" }
itertools             = { version = "0.12" }
ordered-float         = { version = "4" }
paste                 = { version = "1" }
recursive             = { version = "0.1" }
rust_decimal          = { version = "1", default-features = false, features = ["std"] }
kite_sql_serde_macros = { version = "0.2.0", path = "kite_sql_serde_macros" }
siphasher             = { version = "1" }
sqlparser             = { version = "0.61", default-features = false, features = ["std"] }
thiserror             = { version = "1" }
ulid                  = { version = "1" }

# Optional dependencies for features
comfy-table           = { version = "7", default-features = false, optional = true }
pyo3                  = { version = "0.23", features = ["auto-initialize"], optional = true }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion             = { version = "0.5", features = ["html_reports"] }
indicatif             = { version = "0.17" }
tempfile              = { version = "3.10" }
# Benchmark
sqlite                = { version = "0.34" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocksdb = { version = "0.23", optional = true, default-features = false, features = ["bindgen-runtime"] }
librocksdb-sys = { version = "0.17.1", optional = true }
lmdb = { version = "0.8.0", optional = true }
lmdb-sys = { version = "0.8.0", optional = true }
rustyline = { version = "14", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen        = { version = "0.2.106" }
web-sys             = { version = "0.3.83", features = [
    "Storage",
    "Window",
] }
base64              = { version = "0.21" }
getrandom           = { version = "0.2", features = ["js"] }
getrandom_03        = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
js-sys              = { version = "0.3.83" }
once_cell           = { version = "1" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.56"

[workspace]
members = [
  "tests/sqllogictest",
  "tests/macros-test",
  "kite_sql_serde_macros",
  "tpcc"]

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
