[package]
name        = "kite_sql_serde_macros"
version     = "0.2.1"
edition     = "2021"
description = "Derive macros for KiteSQL"
documentation = "https://docs.rs/kite_sql_serde_macros/latest/kite_sql_serde_macros/"
license     = "Apache-2.0"
repository  = "https://github.com/KipData/KiteSQL"

[dependencies]
darling = "0.20"
proc-macro2 = "1"
quote = "1"
syn = "2"

[lib]
path = "src/lib.rs"
proc-macro = true
