[package]
name    = "macros-test"
version = "0.4.0"
edition = "2021"

[dev-dependencies]
"kite_sql"  = { path = "../..", features = ["macros", "orm"] }
lazy_static = { version = "1" }
rust_decimal = { version = "1", default-features = false, features = ["std"] }
sqlparser   = { version = "0.61", default-features = false, features = ["std"] }
tempfile    = { version = "3.10" }
